# hermes

backend/: Cargo.toml
backend/src/: config.rs  db.rs  main.rs
backend/src/controllers/: file_controller.rs  mod.rs  project_controller.rs  user_controller.rs
backend/src/middleware/: mod.rs
backend/src/models/: file.rs  mod.rs  project.rs  user.rs
backend/src/routes/: file_routes.rs  mod.rs  project_routes.rs  user_routes.rs
backend/src/utils/: hash.rs  jwt.rs
frontend/: angular.json  package-lock.json  package.json
frontend/public/styles/components/: _cards.scss
frontend/public/styles/utils/: _base.scss  _colors.scss  _reset.scss  _variables.scss
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/guards/: authenticated.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/models/: file.model.ts  project.model.ts
frontend/src/app/core/pipes/: file-title.pipe.spec.ts  file-title.pipe.ts  shorten.pipe.ts
frontend/src/app/core/services/: auth.service.ts  file.service.ts  project.service.ts
frontend/src/app/pages/create-project/: create-project.component.html  create-project.component.scss  create-project.component.ts
frontend/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts  dashboard.module.ts
frontend/src/app/pages/login/: login.component.html  login.component.ts
frontend/src/app/pages/project/: project.component.html  project.module.ts  (+2 more)
frontend/src/app/state/: app.state.ts
(+84 files in other folders)
