[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "9" }
argon2 = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }